--- a/housemate-pro/package.json
+++ b/housemate-pro/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://{giselle-arboleda}.github.io/{Final-Project}",
+  "homepage": "http://giselle-arboleda.github.io/Final-Project",
   "name": "household-app",
   "version": "0.1.0",
   "private": true,
